clusters/takeout/apps/handbrake/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: handbrake
  labels:
    app: handbrake
spec:
  serviceName: handbrake
  selector:
    matchLabels:
      app: handbrake
  replicas: 1 # active nfs-client-fast
  template:
    metadata:
      labels:
        app: handbrake
    spec:
      containers:
        - name: handbrake
          image: jlesage/handbrake:latest
          imagePullPolicy: Always
          command: # ["sh","-c","tail -f /dev/null"]
          - sh
          - -c
          - |
            apk add curl &&
            /init
          volumeMounts:
            - name: handbrake-config
              mountPath: /config
            - name: downloads
              subPath: watch
              mountPath: /watch
            - name: downloads
              subPath: transcoded
              mountPath: /output
            - name: dri
              mountPath: /dev/dri
            - name: warehouse
              mountPath: /storage/warehouse
            - name: downloads
              mountPath: /storage/downloads
          securityContext:
            privileged: true
          resources:
            requests: 
              cpu: 100m
            limits:
              memory: 4Gi
      volumes:
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: handbrake-config
          persistentVolumeClaim:
            claimName: handbrake-config
        - name: warehouse
          persistentVolumeClaim:
            claimName: warehouse-media
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
      imagePullSecrets:
        - name: docker-hub
  # volumeClaimTemplates:
  #   - apiVersion: v1
  #     kind: PersistentVolumeClaim
  #     metadata:
  #       name: handbrake-config
  #     spec:
  #       accessModes:
  #         - ReadWriteMany
  #       volumeMode: Filesystem
  #       storageClassName: nfs-client
  #       resources:
  #         requests:
  #           storage: 1Gi
